--- a/N2D2/models/mnist-stdp-NMNIST-jo.ini
+++ b/N2D2/models/mnist-stdp-NMNIST-jo.ini
@@ -16,35 +16,33 @@ ConfigSection=env.config
 [env.config]
 ReadAerData=1
 
-; Conv1 layer
+; Conv layer
 [conv1]
 Input=env
 Type=Conv
-KernelDims=5 5
 NbOutputs=32
-Stride=2
+KernelDims=5 5
 ConfigSection=common.config
-ConfigSection(Spike_Analog)=common_Spike_Analog.config
+ConfigSection(Spike_Analog)=common_Spike_Analog_conv1.config
 ConfigSection(Spike_RRAM)=common_Spike_RRAM.config
 
-; Conv2 layer
+; Conv layer
 [conv2]
 Input=conv1
 Type=Conv
-KernelDims=5 5
 NbOutputs=32
-Stride=2
+KernelDims=5 5
 ConfigSection=common.config
-ConfigSection(Spike_Analog)=common_Spike_Analog.config
+ConfigSection(Spike_Analog)=common_Spike_Analog_conv2.config
 ConfigSection(Spike_RRAM)=common_Spike_RRAM.config
 
 ; Output layer (fully connected)
 [fc1]
-Input=conv2
+Input=env
 Type=Fc
-NbOutputs=50
+NbOutputs=1
 ConfigSection=common.config
-ConfigSection(Spike_Analog)=common_Spike_Analog.config
+ConfigSection(Spike_Analog)=common_Spike_Analog_conv1.config
 ConfigSection(Spike_RRAM)=common_Spike_RRAM.config
 
 [fc1.Target]
@@ -57,9 +55,26 @@ Threshold=1.0
 Refractory=10,000,000
 
 ; Common config for Spike_Analog model
-[common_Spike_Analog.config]
+[common_Spike_Analog_conv1.config]
 EnableStdp=1
-Threshold=50.0
+Threshold=10.0
+StdpLtp=50,000,000
+InhibitRefractory=1,000
+Leak=100,000,000
+BipolarIntegration=0
+RefractoryIntegration=0
+WeightsMinMean="1.0e-4; 10%"
+WeightsMaxMean="1.0; 10%"
+WeightsRelInit="0.67; 20%"
+WeightIncrement="0.0017; 1%"
+WeightIncrementDamping=-3
+WeightDecrement="0.0007; 1%"
+WeightDecrementDamping=0
+
+; Common config for Spike_Analog model
+[common_Spike_Analog_conv2.config]
+EnableStdp=1
+Threshold=2.0
 StdpLtp=50,000,000
 InhibitRefractory=1,000
 Leak=100,000,000
