Added frame member to AerEvent class; LoadAerStimulusData() not yet working

--- a/N2D2/models/mnist-stdp-NMNIST-jo.ini
+++ b/N2D2/models/mnist-stdp-NMNIST-jo.ini
@@ -17,24 +17,24 @@ ConfigSection=env.config
 ReadAerData=1
 
 ; Conv layer
-[conv1]
-Input=env
-Type=Conv
-NbOutputs=32
-KernelDims=5 5
-ConfigSection=common.config
-ConfigSection(Spike_Analog)=common_Spike_Analog_conv1.config
-ConfigSection(Spike_RRAM)=common_Spike_RRAM.config
+;[conv1]
+;Input=env
+;Type=Conv
+;NbOutputs=32
+;KernelDims=5 5
+;ConfigSection=common.config
+;ConfigSection(Spike_Analog)=common_Spike_Analog_conv1.config
+;ConfigSection(Spike_RRAM)=common_Spike_RRAM.config
 
 ; Conv layer
-[conv2]
-Input=conv1
-Type=Conv
-NbOutputs=32
-KernelDims=5 5
-ConfigSection=common.config
-ConfigSection(Spike_Analog)=common_Spike_Analog_conv2.config
-ConfigSection(Spike_RRAM)=common_Spike_RRAM.config
+;[conv2]
+;Input=conv1
+;Type=Conv
+;NbOutputs=32
+;KernelDims=5 5
+;ConfigSection=common.config
+;ConfigSection(Spike_Analog)=common_Spike_Analog_conv2.config
+;ConfigSection(Spike_RRAM)=common_Spike_RRAM.config
 
 ; Output layer (fully connected)
 [fc1]
