added asynclabel functionality to DVS; pupil now child class of DVS

--- a/N2D2/models/a.ini
+++ b/N2D2/models/a.ini
@@ -2,8 +2,10 @@ DefaultModel=Spike_Analog
 
 ; Database
 [database]
-Type=DVS_Database
+Type=Pupil_Database
 Validation=0.0
+SegmentSize=1,000,000,000,000,000
+SegmentStepSize=200,000,000,000,000
 
 ; Environment
 [env]
